# pandas-streaming

./: .gitignore  .local.jenkins.lin.yml  .local.jenkins.win.yml  .travis.yml  CHANGELOGS.rst  HISTORY.rst  MANIFEST.in  README.rst  appveyor.yml  azure-pipelines.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: black-ruff.yml  check-urls.yml  documentation.yml  rstcheck.yml  wheels-any.yml
_doc/: conf.py  i_ex.rst  i_examples.rst  index.rst  sg_execution_times.rst
_doc/api/: connex_split.rst  dataframe.rst  dataframe_io.rst  dataframe_split.rst  rdata.rst  rdf.rst  rexc.rst  rio.rst
_doc/examples/: README.txt  first_step.py
_doc/notebooks/: first_steps.ipynb
_doc/sphinxdoc/source/: HISTORY.rst  conf.py  glossary.rst  index.rst
_doc/sphinxdoc/source/_templates/: blogtoc.html
_doc/sphinxdoc/source/api/: index.rst  rdf.rst  rexc.rst
_doc/sphinxdoc/source/blog/2017/: 2017-09-21_first_day.rst
_doc/sphinxdoc/source/blog/2018/: 2018-08-19_streamz.rst
_doc/sphinxdoc/source/phdoc_static/: my-styles.css
_doc/sphinxdoc/source/phdoc_templates/: page.html
_doc/sphinxdoc/source/tutorial/: index.rst
_doc/tutorial/: index.rst
_unittests/: run_unittests.py  unittests.out
_unittests/ut_df/: test_connex_split.py  test_connex_split_big.py  test_connex_split_cat.py  test_dataframe_helpers.py  test_dataframe_helpers_simple.py  test_dataframe_io.py  test_dataframe_io_helpers.py  test_dataframe_sort.py  test_pandas_groupbynan.py  test_streaming_dataframe.py
_unittests/ut_df/data/: buggy_hash.csv  buggy_hash2.csv  classic.json  example.json  example2.json
_unittests/ut_documentation/: test_run_notebooks.py
_unittests/ut_module/: test_check.py  test_code_style.py  test_convert_notebooks.py  test_readme.py  test_sklearn.py  test_version.py
pandas_streaming/: __init__.py  ext_test_case.py
pandas_streaming/data/: __init__.py  dummy.py
pandas_streaming/df/: __init__.py  connex_split.py  dataframe.py  dataframe_helpers.py  dataframe_io.py  dataframe_io_helpers.py  dataframe_split.py
pandas_streaming/exc/: __init__.py  exc_streaming.py
src/pandas_streaming/: __init__.py
src/pandas_streaming/data/: __init__.py  dummy.py
src/pandas_streaming/df/: __init__.py  connex_split.py  dataframe.py  dataframe_helpers.py  dataframe_io.py  dataframe_io_helpers.py  dataframe_split.py
src/pandas_streaming/exc/: __init__.py  exc_streaming.py
